# xcoroutine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  thread_pool.md
.github/workflows/: ci.yml
docs/: cancellation.md  coroutine.md  memory_order.md  sync.md  when_all.md
include/xcoro/: condition_variable.hpp  latch.hpp  manual_reset_event.hpp  mutex.hpp  semaphore.hpp  thread_pool.hpp  void_value.hpp  when_all.hpp  when_any.hpp
include/xcoro/net/: buffer.hpp  io_context.hpp
include/xcoroutine/: awaitable_traits.hpp  sync_wait.hpp  task.hpp  thread_pool.hpp  when_all.hpp
include/xcoroutine/concepts/: awaitable.hpp
include/xcoroutine/utils/: nocopyable.hpp  void_value.hpp
tests/: awaitable_traits_test.cpp  condition_variable_test.cpp  event_test.cpp  latch_test.cpp  mutex_test.cpp  net_test.cpp  promise_test.cpp  semaphore_test.cpp  task_test.cpp  thread_pool_test.cpp  when_all_test.cpp  when_any_test.cpp
